--- a/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
+++ b/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
@@ -583,6 +583,7 @@
         draw: function draw() {
           if(isDemo)
           {
+            //Generates a sine wave
             var sinVal = Math.sin(demoCounter);
             demoCounter += Math.PI / 100;
 
