--- a/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
+++ b/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
@@ -500,9 +500,29 @@
   </template>
 
   <script>
+      
+      //Helper functions
       var map = function (value, in_min, in_max, out_min, out_max) {
         return (value - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
        };
+
+       var mapOrientationToCrosshairPos = function(pitchIn, rollIn, element) {
+        var yPos;
+
+        if(pitchIn > 90)
+        {
+          yPos = 90;
+        }
+        else if(pitchIn < -90)
+        {
+          yPos = -90;
+        }
+        else
+        {
+          yPos = map(pitchIn, -90, 90, -287, 112);
+        }
+        element.style.transform = "translate3d(-117px," + yPos + "px, 0px) rotate(" + rollIn + "deg)";
+       }
 
        var isDemo = false;
        var demoCounter = 0;
@@ -590,37 +610,11 @@
             this.pitch = 90*sinVal;
             this.roll = 25*sinVal;
 
-            var yPos;
-            if(this.pitch > 90)
-            {
-              yPos = 90;
-            }
-            else if(this.pitch < -90)
-            {
-              yPos = -90;
-            }
-            else
-            {
-              yPos = map(this.pitch, -90, 90, -287, 112);
-            }
-            this.$.crosshair.style.transform = "translate3d(-117px," + yPos + "px, 0px) rotate(" + this.roll + "deg)"; 
+            mapOrientationToCrosshairPos(this.pitch, this.roll, this.$.crosshair); 
           }
           else
           {
-            var yPos;
-            if(this.pitch > 90)
-            {
-              yPos = 90;
-            }
-            else if(this.pitch < -90)
-            {
-              yPos = -90;
-            }
-            else
-            {
-              yPos = map(this.pitch, -90, 90, -287, 112);
-            }
-            this.$.crosshair.style.transform = "translate3d(-117px," + yPos + "px, 0px) rotate(" + this.roll + "deg)";
+            mapOrientationToCrosshairPos(this.pitch, this.roll, this.$.crosshair);
           }
 
         }
