added small change to properties

--- a/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
+++ b/src/plugins/navigation-data/public/webcomponents/attitude-indicator.html
@@ -533,11 +533,11 @@
         properties: {
           pitchValue: {
             type: Number,
-            value: 0
+            value: function(){return 0;}
           },
           hudPos: {
             type: Number,
-            value: 10
+            value: function(){return 10;}
           },
         },
         listeners: {
