--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -444,14 +444,26 @@ kbd.light, .light-keys kbd, .key.light, .light-keys .key {
                 },
                 SaveToCurrentSession: function(){
                     //And after updating the mapped setting for the current session, save them as well.
-                    var currentSettings = {name: "current-session"};
-                    if (this.presets.some(function(item){return item.name=="current-session"})){
-                        
-                        this.eventEmitter.emit('plugin.inputConfigurator.savePreset', currentSettings);  
-                    } else {
-                        this.eventEmitter.emit('plugin.inputConfigurator.saveNewPreset', currentSettings); 
+                    console.log("THESE ARE PRESETS");
+                    console.log(this.presets);
+
+                    var currentSession = $.grep(this.presets, function(e){ return e.name == "current-session"; });
+
+                    if(currentSession.length == 0)
+                    {
+                        //We didn't find the current-session preset, create a new one
+                        this.eventEmitter.emit('plugin.inputConfigurator.saveNewPreset', "current-session"); 
                     }
-                  
+                    else if(currentSession.length == 1)
+                    {
+                        //We found the current-session preset, update it
+                        this.eventEmitter.emit('plugin.inputConfigurator.savePreset', currentSession[0]);  
+                    }
+                    else
+                    {
+                        alert("current-session duplicates!");
+                        console.log("Multiple current-session presets found. This shouldn't happen");
+                    }
                 },
                 onLoadPreset: function(e) {
                     var self = this;
