--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -443,12 +443,8 @@ kbd.light, .light-keys kbd, .key.light, .light-keys .key {
                     }
                 },
                 SaveToCurrentSession: function(){
-                    //And after updating the mapped setting for the current session, save them as well.
-                    console.log("THESE ARE PRESETS");
-                    console.log(this.presets);
-
+                    //And after updating the mapped setting for the current session, save them as well
                     var currentSession = $.grep(this.presets, function(e){ return e.name == "current-session"; });
-
                     if(currentSession.length == 0)
                     {
                         //We didn't find the current-session preset, create a new one
