fix odd behavior around null notification array

--- a/src/plugins/notifications/public/webcomponents/orov-notifications.html
+++ b/src/plugins/notifications/public/webcomponents/orov-notifications.html
@@ -60,7 +60,10 @@
             is: 'orov-notifications',
             properties: {
                 notices: {
-                    type: Array
+                    type: Array,
+                    value: function() {
+                        return [];
+                    }
                 },
                 defaultPanel: {
                     type: String,
