fixed compass heading lock bug

--- a/src/plugins/new-ui/public/webcomponents/compass.html
+++ b/src/plugins/new-ui/public/webcomponents/compass.html
@@ -153,11 +153,11 @@
         properties: {
           bearing: {
             type: String,
-            value: function(){return '000';}
+            value: function(){return undefined;}
           },
           heading: {
             type: String,
-            value: function(){return '000';}
+            value: function(){return undefined;}
           },
           headingLock: {
             type: Boolean,
