Enabled the Download Logs feature on _updates

--- a/src/system-plugins/software-update-alert/public/webcomponents/orov-software-update-progress.html
+++ b/src/system-plugins/software-update-alert/public/webcomponents/orov-software-update-progress.html
@@ -111,7 +111,7 @@
             this.eventEmitter.emit("plugin.updateManager.retry");
         },
         _handleDownload:function(){
-            this.eventEmitter.emit("plugin.updateManager.download");
+            this.eventEmitter.emit("plugin.about.downloadSystemInformation");
         },
         _showRecoveryButtons:function(updateState){
             return updateState=="Failed";
