--- a/src/plugins/new-ui/public/webcomponents/switches.html
+++ b/src/plugins/new-ui/public/webcomponents/switches.html
@@ -113,13 +113,26 @@
         },
         __oncontentLoaded: function(){
           var self=this;
+
           this.set("_coveredControls",Polymer.dom(this).children.filter(function(item){return item.collectionDomElement==undefined}));
-          //TODO: on detach, remove the listeners
+          
           Polymer.dom(self).children.forEach(function(control){
-            control.addEventListener('switched',function(e){
-              self._swapStateClasses(self.$$("#"+control.shortName),e.detail);
-            })
+
+            registerEventListener(control, {
+              event: 'switched',
+              callback: function(e) {
+                self._swapStateClasses(self.$$("#"+control.shortName),e.detail);
+              }
+            });
+
             control.style.display="none";
+          });
+        },
+        detached: function() {
+          var self = this;
+
+          Polymer.dom(self).children.forEach(function(control) {
+            unRegisterAllEventListeners(control);
           });
         },
         _getClasses:function(state){
