3s load time with loading screen after .5s

--- a/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
+++ b/src/static/webcomponents/orov-behaviors/orov-emitter-behavior.html
@@ -27,6 +27,9 @@
       console.log('oROV Emitter Behavior for ', this, 'enabled!');
     },
     _registerTreeOfListeners: function(root,emitter){
+      if (!root){
+        return;
+      }
       var self=this;
       if(emitter == undefined){
         return;
