--- a/src/plugins/camera-servo/public/webcomponents/orov-servo-tilt.html
+++ b/src/plugins/camera-servo/public/webcomponents/orov-servo-tilt.html
@@ -34,7 +34,10 @@
         },
         behaviors: [namespace('behaviors').oROVStandard],
         _servoAngleChanged: function(){
+          
+          //For some reason, the camera icon rotates opposite to the value we expect. Correct for it here with the negative
           var newvalue='rotate('+ -this.servoAngle +'deg)';
+          
           this.$.servoTiltImage.style['-webkit-transform'] = newvalue;
           this.$.servoTiltImage.style['-moz-transform'] = newvalue;
           this.$.servoTiltImage.style['transform'] = newvalue;
@@ -45,7 +48,7 @@
         registerEmitterHandlers: function(emitter){
           var self = this;
           emitter.withHistory.on('plugin.cameraServo.currentPos',function(angle){
-            self.servoAngle = -angle;
+            self.servoAngle = angle;
           });
         }
       })
