Default set to gyro and removed mousetrap debug

--- a/src/plugins/new-ui/public/webcomponents/compass.html
+++ b/src/plugins/new-ui/public/webcomponents/compass.html
@@ -165,11 +165,11 @@
           },
           isCompass: {
             type: Boolean,
-            value: function(){return true;}
+            value: function(){return false;}
           },
           mode: {
             type: String,
-            value: function(){return "Compass";}
+            value: function(){return "Gyro";}
           },
           options: {
             type: Object,
